# memgrad

./: .gitignore  .justfile  README.md  pyproject.toml
Other/: start-jupyter.sh
memgrad/: __init__.py  adambash.py  adamtest.py  graddy.py  main.py  memgradstep.py  memrefl.py  mommem.py  mommem2.py  mommem3.py  predcor.py  tailplot.py  tplotly.py  valley.py
src/memgrad/: main.py
tests/: test_main.py
