[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memgrad"
version = "0.1.0"
description = "Memory based gradient method"
readme = "README.md"
dependencies = [
    "numpy>=2.3.3", 
    "ufmt>=2.8.0",
    ]

[project.optional-dependencies]
dev = ["pytest", "ufmt"]

# pip install -e .